--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
        /*Center horizontaly ie */
        -ms-flex-pack: center;height:100vh;">
 
-<img id="pic" align=right src=https://i.postimg.cc/zX1qP4Pz/f48dc7a3c8b76eeaeb4b662660cc8426-preview-rev-1.png width=auto height=100% style="margin-right:-200px;transition: 5s;">
+<img id="pic" align=right src=https://i.postimg.cc/434Dmf98/Utako-Full-Appearance50.png width=auto height=100% style="margin-right:-200px;transition: 5s;">
 
 
 <center style="margin-top: auto;
@@ -38,7 +38,7 @@
     max-width: 100%;">
     </div>
 <p class="scrollable" style="font-family: 'Tapestry', cursive;font-size:20px;">
-Anybody entering her inn, or encountering her outside would soon take note of the girl's ever so welcoming smile and positive attitude. Those curious eyes of hers feel like they are reading you at all times. Perhaps you seen her before with a dishtub or empty barrel. Her teeth are crooked but kept well, and her cloathes adopted a constant smell of hops steam.
+Anybody entering her inn, or encountering her outside would soon take note of the girl's ever so calm demeanor and calculating nature. Those curious eyes of hers feel like they are reading you at all times. Perhaps you seen her before with a dishtub or empty barrel. Her teeth are crooked but kept well, and her cloathes adopted a constant smell of hops steam.
 <br>
 </p>
 <div>
